# verilogcoder-goal-benchmark

./: .gitignore  README.md
benchmark/prob018_mux256to1/: readme.md
benchmark/prob018_mux256to1/prompt/: prompt_area.txt  prompt_perf.txt  prompt_power.txt
benchmark/prob018_mux256to1/src/: top_area.sv  top_power.sv
benchmark/prob018_mux256to1/yosys/: prob018_area_area.ys  prob018_area_perf.ys  prob018_area_power.ys  prob018_area_ref.ys
benchmark/prob027_fadd/: README.md
benchmark/prob027_fadd/prompt/: prompt_area.txt  prompt_perf.txt  prompt_power.txt
benchmark/prob030_popcount255/: readme.md
benchmark/prob040_count10/: readme.md
benchmark/prob080_timer/: prompt_area.txt  prompt_power.txt
benchmark/prob105_rotate100/: prompt.txt  prompt_area.txt  prompt_perf.txt  summary.csv  summary.json
benchmark/prob130_circuit5/: prompt_area.txt  prompt_perf.txt  summary.csv  summary.json
benchmark/prob230_multifile_easy/: summary.csv  summary.json
benchmark/prob240_singlefile_midarith/: summary.csv
benchmark/prob241_singlefile_inc8pipe/: summary.csv  summary.json
orfs_workspace/OpenROAD-flow-scripts/tools/kepler-formal/: .gitignore  .gitmodules  CMakeLists.txt  README.md
orfs_workspace/OpenROAD-flow-scripts/tools/kepler-formal/.github/workflows/: c-cpp.yml  regress.yml
orfs_workspace/OpenROAD-flow-scripts/tools/kepler-formal/example/: test_config_verilog.yaml
orfs_workspace/OpenROAD-flow-scripts/tools/kepler-formal/example/tinyrocket_naja_edited.if/: db_implementation.snl  db_interface.snl  snl.mf
orfs_workspace/OpenROAD-flow-scripts/tools/kepler-formal/src/: CMakeLists.txt
orfs_workspace/OpenROAD-flow-scripts/tools/kepler-formal/src/clauses/: SNLLogicCloud.cpp  SNLLogicCloud.h  SNLTruthTableTree.cpp  SNLTruthTableTree.h  Tree2BoolExpr.cpp  Tree2BoolExpr.h
orfs_workspace/OpenROAD-flow-scripts/tools/kepler-formal/src/config/: CMakeLists.txt  Config.h
orfs_workspace/OpenROAD-flow-scripts/tools/kepler-formal/src/formal/: BoolExpr.cpp  BoolExpr.h  BoolExprCache.cpp  BoolExprCache.h  BoolExprCnfWriter.cpp  BoolExprCnfWriter.h  CMakeLists.txt
orfs_workspace/OpenROAD-flow-scripts/tools/kepler-formal/src/sat/: SATSolverWrapper.h
orfs_workspace/OpenROAD-flow-scripts/tools/kepler-formal/src/scope/: CMakeLists.txt  ScopeExtraction.cpp  ScopeExtraction.h
orfs_workspace/OpenROAD-flow-scripts/tools/kepler-formal/src/strategies/: CMakeLists.txt
orfs_workspace/OpenROAD-flow-scripts/tools/kepler-formal/src/strategies/miter/: BuildPrimaryOutputClauses.cpp  BuildPrimaryOutputClauses.h  MiterStrategy.cpp  MiterStrategy.h
orfs_workspace/OpenROAD-flow-scripts/tools/kepler-formal/src/utils/: SNLLogicCone.cpp  SNLLogicCone.h
orfs_workspace/OpenROAD-flow-scripts/tools/kepler-formal/test/: CMakeLists.txt
orfs_workspace/OpenROAD-flow-scripts/tools/kepler-formal/test/scope/: CMakeLists.txt  ScopeExtractionTests.cpp
orfs_workspace/OpenROAD-flow-scripts/tools/kepler-formal/test/strategies/miter/: CMakeLists.txt  MiterTests.cpp  test_config_failure.yaml  test_config_naja_if_with_se.yaml  test_config_verilog.yaml
orfs_workspace/OpenROAD-flow-scripts/tools/kepler-formal/test/utils/: BoolExprCnfWriterTests.cpp  CMakeLists.txt  SNLTruthTableTreeTests.cpp
verilogcoder-goal-benchmark/: .gitmodules  README.md
verilogcoder-goal-benchmark/a/: perf  power
verilogcoder-goal-benchmark/verilogcoder_upstream/: README.md  test_openroad_eval.py
(+1226 files in other folders)
